--- a/clase10/package.json
+++ b/clase10/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "backend1",
+  "name": "clase10",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "apps.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,6 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
+    "nodemon": "^2.0.22",
+    "socket.io": "^4.6.2"
   }
 }
